# Piaic-q2-Assignment

Assignment-1/: pyproject.toml
Assignment-1/src/message_formatter_project/: main.py  message_formatter.py
Assignment-2/: .gitignore  README.md  pyproject.toml  requirements.txt
Assignment-2/src/hello_agent/: __init__.py  agent_hello.py
Assignment-3/: .env  output.md  pyproject.toml
Assignment-3/src/conceptguru/: __init__.py  main.py
Assignment-4/: chat_history.json  chatbot.py
Assignment-5/: .env  README.md  app.py  my_secrets.py
Assignment-6/: .env  README.md  agent.py  app.py  my_secrets.py
Assignment-6/profiles/: default.json
Assignment-6/tools/: calculator_tool.py  weather_tool.py
message_formatter_project/: README.md
