[project]
name = "hello-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad-Saeed-Ahmad-SL", email = "saeed.ahmad@solutionsloft.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.14",
]

[project.scripts]
run-agent = "hello_agent.agent_hello:my_first_agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
